--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ embassy-time = { version = "0.3.0" }
 embassy-rp = { version = "0.1.0", features = ["time-driver", "critical-section-impl"] }
 embassy-sync = "0.5.0"
 embassy-futures = "0.1.1"
+heapless = "0.8.0"
 defmt = "0.3"
 embassy-usb-logger = "0.1.0"
 log = "0.4"
