--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,5 @@ ag-lcd = { version = "0.2.0", features = ["i2c"] }
 port-expander = "0.3.0"
 panic-halt = "0.2.0"
 fixed = "1.27.0"
+embassy-embedded-hal = "=0.1.0"
+embedded-sdmmc = "0.5.0"
